--- a/course.yml
+++ b/course.yml
@@ -1,4 +1,4 @@
-title: Categorical Data Analysis in Python Jiaqi Dong
-description: Course description goes here.
-programming_language: python
-from: python-base-prod:v1.0.2
+title: "Categorical Data Analysis in Python Jiaqi Dong"
+description: "Course description goes here."
+programming_language: "python"
+from: "python-base-prod:v1.0.2"
